PL-Practica4/src/y.output
Terminales no usados en la gramática

    NUMERO
    LETRA
    PUNTO
    COMILLAS
    COMENT
    COR_IZQ
    COR_DER


Gramática

    0 $accept: Programa $end

    1 Programa: PROGRAM identificador bloque

    2 $@1: ε

    3 bloque: LLAVE_IZQ $@1 declarar_variables declarar_funciones Sentencias LLAVE_DER

    4 declarar_funciones: declarar_funciones declarar_funcion
    5                   | ε

    6 $@2: ε

    7 declarar_funcion: cabecera_funcion $@2 bloque

    8 $@3: ε

    9 $@4: ε

   10 $@5: ε

   11 $@6: ε

   12 cabecera_funcion: TIPO_DATO $@3 identificador $@4 PAR_IZQ $@5 Parametros $@6 PAR_DER
   13                 | error

   14 $@7: ε

   15 $@8: ε

   16 declarar_variables: INI_VAR_LOCAL $@7 Variables_locales $@8 FIN_VAR_LOCAL
   17                   | ε

   18 Variables_locales: Variables_locales Cuerpo_declar_variables
   19                  | Cuerpo_declar_variables

   20 $@9: ε

   21 Cuerpo_declar_variables: TIPO_DATO $@9 lista_ID PYC

   22 $@10: ε

   23 @11: ε

   24 Cuerpo_declar_variables: LISTA MENOR_QUE TIPO_DATO MAYOR_QUE $@10 ID OP_ASIGNACION const_lista @11 PYC
   25                        | TIPO_DATO error
   26                        | error

   27 Parametros: Parametros COMA parametro
   28           | parametro
   29           | Parametros error parametro

   30 parametro: TIPO_DATO identificador

   31 $@12: ε

   32 Sentencias: Sentencias $@12 Sentencia

   33 $@13: ε

   34 Sentencias: $@13 Sentencia

   35 Sentencia: bloque
   36          | sentencia_asignacion PYC
   37          | sentencia_if
   38          | sentencia_while
   39          | sentencia_entrada PYC
   40          | sentencia_salida PYC
   41          | sentencia_return PYC
   42          | sentencia_repeat_until
   43          | sentencia_mover_lista
   44          | sentencia_comenzar_lista
   45          | sentencia_lista_aniadir_en

   46 sentencia_asignacion: identificador OP_ASIGNACION expresion

   47 sentencia_if: IF expresion bloque sentencia_else_if

   48 sentencia_else_if: ELSE IF expresion bloque sentencia_else_if
   49                  | sentencia_else

   50 sentencia_else: ELSE bloque
   51               | ε

   52 sentencia_while: WHILE expresion Sentencia

   53 sentencia_entrada: INPUT lista_ID

   54 sentencia_salida: OUTPUT lista_expresiones_o_cadena

   55 sentencia_return: RETURN expresion

   56 sentencia_repeat_until: REPEAT Sentencia UNTIL expresion

   57 sentencia_mover_lista: identificador OP_LISTA PYC
   58                      | identificador OP_LISTA identificador PYC

   59 sentencia_comenzar_lista: OP_INIT_LISTA identificador PYC
   60                         | identificador OP_INIT_LISTA expresion PYC

   61 sentencia_lista_aniadir_en: identificador OP_ACCESO expresion PYC
   62                           | identificador OP_ACCESO expresion OP_INCREMENT expresion PYC

   63 lista_expresion: lista_expresion COMA expresion
   64                | expresion
   65                | lista_expresion error expresion

   66 expresion: expresion_binaria
   67          | expresion_unaria
   68          | llamada_subprog
   69          | constante
   70          | identificador
   71          | PAR_IZQ expresion PAR_DER
   72          | error

   73 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA exp_cadena
   74                           | exp_cadena
   75                           | lista_expresiones_o_cadena error exp_cadena

   76 exp_cadena: expresion
   77           | CADENA

   78 lista_ID: identificador
   79         | lista_ID COMA identificador
   80         | lista_ID error ID

   81 expresion_binaria: expresion OP_SUM_RES expresion
   82                  | expresion OP_MULT expresion
   83                  | expresion MAYOR_QUE expresion
   84                  | expresion MENOR_QUE expresion
   85                  | expresion OP_LOGIC expresion
   86                  | expresion OP_AND expresion
   87                  | expresion OP_COMP expresion
   88                  | expresion OP_ARIT expresion

   89 expresion_unaria: OP_INCREMENT expresion
   90                 | OP_DECREMENT expresion
   91                 | OP_R expresion
   92                 | OP_SUM_RES expresion
   93                 | OP_MULT expresion
   94                 | expresion OP_INCREMENT
   95                 | expresion OP_DECREMENT

   96 identificador: ID

   97 constante: CONST_ENTERO
   98          | CONST_FLOAT
   99          | BOOL_VALUE
  100          | CONST_CARACTER
  101          | const_lista

  102 const_lista: LLAVE_IZQ lista_expresion LLAVE_DER

  103 $@14: ε

  104 llamada_subprog: identificador PAR_IZQ $@14 lista_expresion PAR_DER


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256) 13 25 26 29 65 72 75 80
    ID (258) 24 80 96
    TIPO_DATO (259) 12 21 24 25 30
    NUMERO (260)
    CADENA (261) 77
    BOOL_VALUE (262) 99
    CONST_ENTERO (263) 97
    CONST_CARACTER (264) 100
    CONST_FLOAT (265) 98
    LETRA (266)
    LISTA (267) 24
    INPUT (268) 53
    OUTPUT (269) 54
    PROGRAM (270) 1
    IF (271) 47 48
    RETURN (272) 55
    WHILE (273) 52
    REPEAT (274) 56
    UNTIL (275) 56
    PYC (276) 21 24 36 39 40 41 57 58 59 60 61 62
    COMA (277) 27 63 73 79
    PUNTO (278)
    COMILLAS (279)
    COMENT (280)
    ELSE (281) 48 50
    INI_VAR_LOCAL (282) 16
    FIN_VAR_LOCAL (283) 16
    PAR_IZQ (284) 12 71 104
    LLAVE_IZQ (285) 3 102
    COR_IZQ (286)
    MENOR_QUE (287) 24 84
    PAR_DER (288) 12 71 104
    LLAVE_DER (289) 3 102
    COR_DER (290)
    MAYOR_QUE (291) 24 83
    OP_SUM_RES (292) 81 92
    OP_MULT (293) 82 93
    OP_ASIGNACION (294) 24 46
    OP_ARIT (295) 88
    OP_COMP (296) 87
    OP_LOGIC (297) 85
    OP_AND (298) 86
    OP_R (299) 91
    OP_INIT_LISTA (300) 59 60
    OP_INCREMENT (301) 62 89 94
    OP_DECREMENT (302) 90 95
    OP_LISTA (303) 57 58
    OP_ACCESO (304) 61 62


No terminales con las reglas donde aparecen

    $accept (50)
        on left: 0
    Programa (51)
        on left: 1
        on right: 0
    bloque (52)
        on left: 3
        on right: 1 7 35 47 48 50
    $@1 (53)
        on left: 2
        on right: 3
    declarar_funciones (54)
        on left: 4 5
        on right: 3 4
    declarar_funcion (55)
        on left: 7
        on right: 4
    $@2 (56)
        on left: 6
        on right: 7
    cabecera_funcion (57)
        on left: 12 13
        on right: 7
    $@3 (58)
        on left: 8
        on right: 12
    $@4 (59)
        on left: 9
        on right: 12
    $@5 (60)
        on left: 10
        on right: 12
    $@6 (61)
        on left: 11
        on right: 12
    declarar_variables (62)
        on left: 16 17
        on right: 3
    $@7 (63)
        on left: 14
        on right: 16
    $@8 (64)
        on left: 15
        on right: 16
    Variables_locales (65)
        on left: 18 19
        on right: 16 18
    Cuerpo_declar_variables (66)
        on left: 21 24 25 26
        on right: 18 19
    $@9 (67)
        on left: 20
        on right: 21
    $@10 (68)
        on left: 22
        on right: 24
    @11 (69)
        on left: 23
        on right: 24
    Parametros (70)
        on left: 27 28 29
        on right: 12 27 29
    parametro (71)
        on left: 30
        on right: 27 28 29
    Sentencias (72)
        on left: 32 34
        on right: 3 32
    $@12 (73)
        on left: 31
        on right: 32
    $@13 (74)
        on left: 33
        on right: 34
    Sentencia (75)
        on left: 35 36 37 38 39 40 41 42 43 44 45
        on right: 32 34 52 56
    sentencia_asignacion (76)
        on left: 46
        on right: 36
    sentencia_if (77)
        on left: 47
        on right: 37
    sentencia_else_if (78)
        on left: 48 49
        on right: 47 48
    sentencia_else (79)
        on left: 50 51
        on right: 49
    sentencia_while (80)
        on left: 52
        on right: 38
    sentencia_entrada (81)
        on left: 53
        on right: 39
    sentencia_salida (82)
        on left: 54
        on right: 40
    sentencia_return (83)
        on left: 55
        on right: 41
    sentencia_repeat_until (84)
        on left: 56
        on right: 42
    sentencia_mover_lista (85)
        on left: 57 58
        on right: 43
    sentencia_comenzar_lista (86)
        on left: 59 60
        on right: 44
    sentencia_lista_aniadir_en (87)
        on left: 61 62
        on right: 45
    lista_expresion (88)
        on left: 63 64 65
        on right: 63 65 102 104
    expresion (89)
        on left: 66 67 68 69 70 71 72
        on right: 46 47 48 52 55 56 60 61 62 63 64 65 71 76 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95
    lista_expresiones_o_cadena (90)
        on left: 73 74 75
        on right: 54 73 75
    exp_cadena (91)
        on left: 76 77
        on right: 73 74 75
    lista_ID (92)
        on left: 78 79 80
        on right: 21 53 79 80
    expresion_binaria (93)
        on left: 81 82 83 84 85 86 87 88
        on right: 66
    expresion_unaria (94)
        on left: 89 90 91 92 93 94 95
        on right: 67
    identificador (95)
        on left: 96
        on right: 1 12 30 46 57 58 59 60 61 62 70 78 79 104
    constante (96)
        on left: 97 98 99 100 101
        on right: 69
    const_lista (97)
        on left: 102
        on right: 24 101
    llamada_subprog (98)
        on left: 104
        on right: 68
    $@14 (99)
        on left: 103
        on right: 104


Estado 0

    0 $accept: • Programa $end

    PROGRAM  desplazar e ir al estado 1

    Programa  ir al estado 2


Estado 1

    1 Programa: PROGRAM • identificador bloque

    ID  desplazar e ir al estado 3

    identificador  ir al estado 4


Estado 2

    0 $accept: Programa • $end

    $end  desplazar e ir al estado 5


Estado 3

   96 identificador: ID •

    $default  reduce usando la regla 96 (identificador)


Estado 4

    1 Programa: PROGRAM identificador • bloque

    LLAVE_IZQ  desplazar e ir al estado 6

    bloque  ir al estado 7


Estado 5

    0 $accept: Programa $end •

    $default  aceptar


Estado 6

    3 bloque: LLAVE_IZQ • $@1 declarar_variables declarar_funciones Sentencias LLAVE_DER

    $default  reduce usando la regla 2 ($@1)

    $@1  ir al estado 8


Estado 7

    1 Programa: PROGRAM identificador bloque •

    $default  reduce usando la regla 1 (Programa)


Estado 8

    3 bloque: LLAVE_IZQ $@1 • declarar_variables declarar_funciones Sentencias LLAVE_DER

    INI_VAR_LOCAL  desplazar e ir al estado 9

    $default  reduce usando la regla 17 (declarar_variables)

    declarar_variables  ir al estado 10


Estado 9

   16 declarar_variables: INI_VAR_LOCAL • $@7 Variables_locales $@8 FIN_VAR_LOCAL

    $default  reduce usando la regla 14 ($@7)

    $@7  ir al estado 11


Estado 10

    3 bloque: LLAVE_IZQ $@1 declarar_variables • declarar_funciones Sentencias LLAVE_DER

    $default  reduce usando la regla 5 (declarar_funciones)

    declarar_funciones  ir al estado 12


Estado 11

   16 declarar_variables: INI_VAR_LOCAL $@7 • Variables_locales $@8 FIN_VAR_LOCAL

    error      desplazar e ir al estado 13
    TIPO_DATO  desplazar e ir al estado 14
    LISTA      desplazar e ir al estado 15

    Variables_locales        ir al estado 16
    Cuerpo_declar_variables  ir al estado 17


Estado 12

    3 bloque: LLAVE_IZQ $@1 declarar_variables declarar_funciones • Sentencias LLAVE_DER
    4 declarar_funciones: declarar_funciones • declarar_funcion

    error      desplazar e ir al estado 18
    TIPO_DATO  desplazar e ir al estado 19

    ID             reduce usando la regla 33 ($@13)
    INPUT          reduce usando la regla 33 ($@13)
    OUTPUT         reduce usando la regla 33 ($@13)
    IF             reduce usando la regla 33 ($@13)
    RETURN         reduce usando la regla 33 ($@13)
    WHILE          reduce usando la regla 33 ($@13)
    REPEAT         reduce usando la regla 33 ($@13)
    LLAVE_IZQ      reduce usando la regla 33 ($@13)
    OP_INIT_LISTA  reduce usando la regla 33 ($@13)

    declarar_funcion  ir al estado 20
    cabecera_funcion  ir al estado 21
    Sentencias        ir al estado 22
    $@13              ir al estado 23


Estado 13

   26 Cuerpo_declar_variables: error •

    $default  reduce usando la regla 26 (Cuerpo_declar_variables)


Estado 14

   21 Cuerpo_declar_variables: TIPO_DATO • $@9 lista_ID PYC
   25                        | TIPO_DATO • error

    error  desplazar e ir al estado 24

    ID  reduce usando la regla 20 ($@9)

    $@9  ir al estado 25


Estado 15

   24 Cuerpo_declar_variables: LISTA • MENOR_QUE TIPO_DATO MAYOR_QUE $@10 ID OP_ASIGNACION const_lista @11 PYC

    MENOR_QUE  desplazar e ir al estado 26


Estado 16

   16 declarar_variables: INI_VAR_LOCAL $@7 Variables_locales • $@8 FIN_VAR_LOCAL
   18 Variables_locales: Variables_locales • Cuerpo_declar_variables

    error      desplazar e ir al estado 13
    TIPO_DATO  desplazar e ir al estado 14
    LISTA      desplazar e ir al estado 15

    FIN_VAR_LOCAL  reduce usando la regla 15 ($@8)

    $@8                      ir al estado 27
    Cuerpo_declar_variables  ir al estado 28


Estado 17

   19 Variables_locales: Cuerpo_declar_variables •

    $default  reduce usando la regla 19 (Variables_locales)


Estado 18

   13 cabecera_funcion: error •

    $default  reduce usando la regla 13 (cabecera_funcion)


Estado 19

   12 cabecera_funcion: TIPO_DATO • $@3 identificador $@4 PAR_IZQ $@5 Parametros $@6 PAR_DER

    $default  reduce usando la regla 8 ($@3)

    $@3  ir al estado 29


Estado 20

    4 declarar_funciones: declarar_funciones declarar_funcion •

    $default  reduce usando la regla 4 (declarar_funciones)


Estado 21

    7 declarar_funcion: cabecera_funcion • $@2 bloque

    $default  reduce usando la regla 6 ($@2)

    $@2  ir al estado 30


Estado 22

    3 bloque: LLAVE_IZQ $@1 declarar_variables declarar_funciones Sentencias • LLAVE_DER
   32 Sentencias: Sentencias • $@12 Sentencia

    LLAVE_DER  desplazar e ir al estado 31

    $default  reduce usando la regla 31 ($@12)

    $@12  ir al estado 32


Estado 23

   34 Sentencias: $@13 • Sentencia

    ID             desplazar e ir al estado 3
    INPUT          desplazar e ir al estado 33
    OUTPUT         desplazar e ir al estado 34
    IF             desplazar e ir al estado 35
    RETURN         desplazar e ir al estado 36
    WHILE          desplazar e ir al estado 37
    REPEAT         desplazar e ir al estado 38
    LLAVE_IZQ      desplazar e ir al estado 6
    OP_INIT_LISTA  desplazar e ir al estado 39

    bloque                      ir al estado 40
    Sentencia                   ir al estado 41
    sentencia_asignacion        ir al estado 42
    sentencia_if                ir al estado 43
    sentencia_while             ir al estado 44
    sentencia_entrada           ir al estado 45
    sentencia_salida            ir al estado 46
    sentencia_return            ir al estado 47
    sentencia_repeat_until      ir al estado 48
    sentencia_mover_lista       ir al estado 49
    sentencia_comenzar_lista    ir al estado 50
    sentencia_lista_aniadir_en  ir al estado 51
    identificador               ir al estado 52


Estado 24

   25 Cuerpo_declar_variables: TIPO_DATO error •

    $default  reduce usando la regla 25 (Cuerpo_declar_variables)


Estado 25

   21 Cuerpo_declar_variables: TIPO_DATO $@9 • lista_ID PYC

    ID  desplazar e ir al estado 3

    lista_ID       ir al estado 53
    identificador  ir al estado 54


Estado 26

   24 Cuerpo_declar_variables: LISTA MENOR_QUE • TIPO_DATO MAYOR_QUE $@10 ID OP_ASIGNACION const_lista @11 PYC

    TIPO_DATO  desplazar e ir al estado 55


Estado 27

   16 declarar_variables: INI_VAR_LOCAL $@7 Variables_locales $@8 • FIN_VAR_LOCAL

    FIN_VAR_LOCAL  desplazar e ir al estado 56


Estado 28

   18 Variables_locales: Variables_locales Cuerpo_declar_variables •

    $default  reduce usando la regla 18 (Variables_locales)


Estado 29

   12 cabecera_funcion: TIPO_DATO $@3 • identificador $@4 PAR_IZQ $@5 Parametros $@6 PAR_DER

    ID  desplazar e ir al estado 3

    identificador  ir al estado 57


Estado 30

    7 declarar_funcion: cabecera_funcion $@2 • bloque

    LLAVE_IZQ  desplazar e ir al estado 6

    bloque  ir al estado 58


Estado 31

    3 bloque: LLAVE_IZQ $@1 declarar_variables declarar_funciones Sentencias LLAVE_DER •

    $default  reduce usando la regla 3 (bloque)


Estado 32

   32 Sentencias: Sentencias $@12 • Sentencia

    ID             desplazar e ir al estado 3
    INPUT          desplazar e ir al estado 33
    OUTPUT         desplazar e ir al estado 34
    IF             desplazar e ir al estado 35
    RETURN         desplazar e ir al estado 36
    WHILE          desplazar e ir al estado 37
    REPEAT         desplazar e ir al estado 38
    LLAVE_IZQ      desplazar e ir al estado 6
    OP_INIT_LISTA  desplazar e ir al estado 39

    bloque                      ir al estado 40
    Sentencia                   ir al estado 59
    sentencia_asignacion        ir al estado 42
    sentencia_if                ir al estado 43
    sentencia_while             ir al estado 44
    sentencia_entrada           ir al estado 45
    sentencia_salida            ir al estado 46
    sentencia_return            ir al estado 47
    sentencia_repeat_until      ir al estado 48
    sentencia_mover_lista       ir al estado 49
    sentencia_comenzar_lista    ir al estado 50
    sentencia_lista_aniadir_en  ir al estado 51
    identificador               ir al estado 52


Estado 33

   53 sentencia_entrada: INPUT • lista_ID

    ID  desplazar e ir al estado 3

    lista_ID       ir al estado 60
    identificador  ir al estado 54


Estado 34

   54 sentencia_salida: OUTPUT • lista_expresiones_o_cadena

    error           desplazar e ir al estado 61
    ID              desplazar e ir al estado 3
    CADENA          desplazar e ir al estado 62
    BOOL_VALUE      desplazar e ir al estado 63
    CONST_ENTERO    desplazar e ir al estado 64
    CONST_CARACTER  desplazar e ir al estado 65
    CONST_FLOAT     desplazar e ir al estado 66
    PAR_IZQ         desplazar e ir al estado 67
    LLAVE_IZQ       desplazar e ir al estado 68
    OP_SUM_RES      desplazar e ir al estado 69
    OP_MULT         desplazar e ir al estado 70
    OP_R            desplazar e ir al estado 71
    OP_INCREMENT    desplazar e ir al estado 72
    OP_DECREMENT    desplazar e ir al estado 73

    expresion                   ir al estado 74
    lista_expresiones_o_cadena  ir al estado 75
    exp_cadena                  ir al estado 76
    expresion_binaria           ir al estado 77
    expresion_unaria            ir al estado 78
    identificador               ir al estado 79
    constante                   ir al estado 80
    const_lista                 ir al estado 81
    llamada_subprog             ir al estado 82


Estado 35

   47 sentencia_if: IF • expresion bloque sentencia_else_if

    error           desplazar e ir al estado 61
    ID              desplazar e ir al estado 3
    BOOL_VALUE      desplazar e ir al estado 63
    CONST_ENTERO    desplazar e ir al estado 64
    CONST_CARACTER  desplazar e ir al estado 65
    CONST_FLOAT     desplazar e ir al estado 66
    PAR_IZQ         desplazar e ir al estado 67
    LLAVE_IZQ       desplazar e ir al estado 68
    OP_SUM_RES      desplazar e ir al estado 69
    OP_MULT         desplazar e ir al estado 70
    OP_R            desplazar e ir al estado 71
    OP_INCREMENT    desplazar e ir al estado 72
    OP_DECREMENT    desplazar e ir al estado 73

    expresion          ir al estado 83
    expresion_binaria  ir al estado 77
    expresion_unaria   ir al estado 78
    identificador      ir al estado 79
    constante          ir al estado 80
    const_lista        ir al estado 81
    llamada_subprog    ir al estado 82


Estado 36

   55 sentencia_return: RETURN • expresion
